deploy/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-public
  namespace: school
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: frontend, port: { number: 80 } } }
    - host: school.84.252.131.166.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: frontend, port: { number: 80 } } }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-public
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.84.252.131.166.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: monitoring-grafana, port: { number: 80 } } }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-public
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.84.252.131.166.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: argocd-server, port: { number: 80 } } }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-public
  namespace: quality
spec:
  ingressClassName: traefik
  rules:
    - host: sonar.84.252.131.166.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: sonarqube, port: { number: 9000 } } }
